--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/image": "^0.16.0",
     "@astrojs/mdx": "^0.18.0",
     "@astrojs/react": "^2.1.0",
     "@astrojs/tailwind": "^3.1.0",
@@ -18,7 +19,8 @@
     "astro": "^2.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "sharp": "^0.31.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
