--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/mdx": "^0.18.0",
     "@astrojs/react": "^2.1.0",
     "@astrojs/tailwind": "^3.1.0",
+    "@radix-ui/react-separator": "^1.0.2",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "astro": "^2.1.3",
