--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "tw-colors": "^1.1.6"
   }
 }
