--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/image": "^0.16.0",
     "@astrojs/mdx": "^0.18.0",
     "@astrojs/react": "^2.1.0",
+    "@astrojs/sitemap": "^1.2.1",
     "@astrojs/tailwind": "^3.1.0",
     "@radix-ui/react-separator": "^1.0.2",
     "@types/react": "^18.0.28",
